# sonny-jim

./: Cargo.toml  README.md
benches/: README.md  parse.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs
src/: fmt.rs  lib.rs
src/snapshots/: sonny_jim__fmt__tests__snapshot.snap  sonny_jim__tests__snapshot.snap
testdata/: kubernetes-oapi.json  small.json
