[package]
name = "sonny-jim"
version = "0.1.0"
edition = "2021"

[dependencies]
foldhash = "0.1.3"
logos = "0.14"
hashbrown = "0.15"
memchr = "2"
hex = "0.4"

[dev-dependencies]
insta = "1.40.0"
serde_json = { version = "1", features = ["raw_value", "indexmap"] }
pollster = { version = "0.3", features = ["macro"] }
