[package]
name = "sonny-jim"
version = "0.1.0"
edition = "2021"

[dependencies]
foldhash = { version = "0.1.3", default-features = false }
logos = { version = "0.14", default-features = false, features = ["export_derive"] }
hashbrown = { version = "0.15", default-features = false }
memchr = { version = "2", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false }

[dev-dependencies]
insta = "1.40.0"
serde_json = { version = "1", features = ["raw_value", "indexmap"] }
pollster = { version = "0.3", features = ["macro"] }
